--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
     "@tanstack/react-query": "^5.83.0",
+    "axios": "^1.12.2",
     "i18next": "^25.3.2",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.526.0",
@@ -21,15 +22,16 @@
     "react-i18next": "^15.6.1",
     "react-router-dom": "^7.7.1",
     "sonner": "^2.0.6",
+    "swiper": "^12.0.2",
     "tailwindcss": "^4.1.11",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
+    "@playwright/test": "^1.49.1",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
-  "@playwright/test": "^1.49.1",
     "eslint": "^9.30.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
