--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-i18next": "^15.6.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.1",
     "sonner": "^2.0.6",
     "swiper": "^12.0.2",
