--- a/package.json
+++ b/package.json
@@ -13,6 +13,13 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
     "@tanstack/react-query": "^5.83.0",
+    "@tiptap/extension-bold": "^3.10.4",
+    "@tiptap/extension-bubble-menu": "^3.10.4",
+    "@tiptap/extension-italic": "^3.10.4",
+    "@tiptap/extension-placeholder": "^3.10.4",
+    "@tiptap/extension-underline": "^3.10.4",
+    "@tiptap/react": "^3.10.4",
+    "@tiptap/starter-kit": "^3.10.4",
     "axios": "^1.12.2",
     "i18next": "^25.3.2",
     "js-cookie": "^3.0.5",
