--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tiptap/extension-bubble-menu": "^3.10.4",
     "@tiptap/extension-italic": "^3.10.4",
     "@tiptap/extension-placeholder": "^3.10.4",
+    "@tiptap/extension-text-align": "^3.10.5",
     "@tiptap/extension-underline": "^3.10.4",
     "@tiptap/react": "^3.10.4",
     "@tiptap/starter-kit": "^3.10.4",
