--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "react-helmet-async": "^2.0.5",
     "react-i18next": "^15.6.1",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.9.5",
+    "remark-gfm": "^4.0.1",
     "sonner": "^2.0.6",
     "swiper": "^12.0.2",
     "tailwindcss": "^4.1.11",
